--- a/index.css
+++ b/index.css
@@ -46,7 +46,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 79%;
+    height: 90%;
 }
 
 .options button {
@@ -77,21 +77,29 @@ body {
     font-weight: 100;
 }
 
-.options div {
+.box {
     display: flex;
-    background-blend-mode: hard-light;
-    background-color: rgb(57, 104, 88);
     width: 100%;
-    height: 50%;
+    height: 60%;
     justify-content: center;
     align-items: center;
     position: relative;
+    z-index: -1;
+    height: 60vh;
+    font-size: 50px;
+    text-align: center;
+    color: #fff;
 }
 
-.options div:first-child {
-    background-image: url(https://static01.nyt.com/images/2020/11/24/arts/23xp-chess1-print/merlin_178097757_9dfc173d-c574-4a57-8695-a5cc643b98f9-superJumbo.jpg);
-}
-
-.options div:nth-child(2) {
-    background-image: url(https://wallpaperaccess.com/full/4108702.jpg);
+.box:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    right: 0;
+    top: -50px;
+    bottom: 0px;
+    background: var(--img) center/cover;
+    -webkit-mask: linear-gradient(transparent, #fff 7.5px calc(100%), transparent);
+    mask: linear-gradient(transparent, #fff 7.5px calc(100%), transparent);
 }
