--- a/styles/index.css
+++ b/styles/index.css
@@ -2,27 +2,38 @@
     font-family: 'Hubballi', cursive;
 }
 
-@media only screen and (min-width: 600px) {
-    html {
-        zoom: .8;
+@media screen and (max-width: 900px) {
+    body .header {
+        position: relative;
+        border-color: gray;
+        border-style: groove;
+        border-width: 1rem;
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: space-around;
+        justify-content: space-around;
+        background-color: rgb(57, 104, 88);
+        height: 50%;
+        z-index: 2;
+        padding-top: 0px;
+        gap: 50px;
+        overflow-x:hidden;
     }
-}
 
-@media only screen and (min-width: 800px) {
-    html {
-        zoom: .9;
+    .header div {
+        align-self: center;
+        width: 300px;
+        display: flex;
+        justify-content: center;
     }
-}
-
-@media only screen and (min-width: 1000px) {
-    html {
-        zoom: 1;
+    .header div span {
+        height: 50px;
     }
-}
 
-@media only screen and (max-width: 720px) {
-    header {
-        position: absolute;
+    .header div:nth-child(2) {
+        width: 180px;
+        margin-bottom: 20px;
     }
 }
 
@@ -30,7 +41,7 @@ body {
     margin: 0vh;
     height: 100vh;
     font-size: 0.833333vw;
-    flex: 1;
+    overflow-x: auto;
 }
 
 .header {
@@ -38,31 +49,22 @@ body {
     border-color: gray;
     border-style: groove;
     border-width: 1rem;
-    padding: 2rem;
+    padding: 2%;
     display: flex;
     justify-content: space-around;
-    align-items: center;
     background-color: rgb(57, 104, 88);
-    height: 10%;
-    z-index: 1;
+    height: 75;
+    z-index: 2;
     overflow: auto;
-    flex: 1;
 }
 
-.header div:first-child {
-    position: relative;
+.header div:first-child, .header div:nth-child(2) {
     display: flex;
-    gap: 1rem;
-}
-
-.header div:nth-child(2) {
-    position: relative;
-    display: flex;
+    height: 0%;
     gap: 1rem;
 }
 
 .header span {
-    position: relative;
     display: flex;
     font-size: 3rem;
     background-color: aquamarine;
@@ -75,56 +77,35 @@ body {
 }
 
 .options {
-    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 79%;
-    flex: 9;
+    height: 79.4%;
 }
 
 .box button {
-    z-index: 1;
+    z-index: 2;
     position: absolute;
-    font-family: 'Courier New', Courier, monospace;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
     background-color: rgba(104, 65, 57, 0.37);
     border-color: rgba(104, 65, 57, 1);
     border-style: dotted;
     border-radius: 0.5rem;
     color: whitesmoke;
-    height: 100%;
-    width: 50%;
     backdrop-filter: blur(0.1rem);
     cursor: pointer;
     overflow: auto;
-}
-
-.box button:first-child {
-    height: 60%;
-}
-
-.options .box:first-child {
-    height: 70%;
-}
-
-.options .box:first-child button:first-child {
-    height: 40%;
+    height: 50%;
+    margin: 0px;
 }
 
 .options button:first-child span:first-child {
-    position: relative;
-    font-size: 350%;
+    font-size: 36px;
     font-weight: 700;
 }
 
 .box button:first-child span:nth-child(2) {
-    position: relative;
-    font-size: 150%;
+    font-size: 24px;
     font-weight: 100;
 }
 
@@ -144,10 +125,10 @@ body {
     position: absolute;
     left: 0;
     right: 0;
-    top: -3rem;
-    bottom: 0rem;
+    top: -1vh;
+    bottom: 0;
     background: var(--img) center/cover;
-    -webkit-mask: linear-gradient(transparent, #fff 3% calc(100%), transparent);
+    -webkit-mask: linear-gradient(transparent, #fff 1vh calc(100%), transparent);
 }
 
 .animation {
@@ -187,13 +168,13 @@ button.postload:hover {
         -webkit-transform: translateX(0%);
     }
     to {
-        -webkit-transform: translateX(-50%);
+        -webkit-transform: translateX(-250px);
     }
 }
 
 @-webkit-keyframes out {
     from {
-        -webkit-transform: translateX(-50%);
+        -webkit-transform: translateX(-250px);
     }
     to {
         -webkit-transform: translateX(0%);
@@ -202,11 +183,11 @@ button.postload:hover {
 
 img.gif#gif-one {
     opacity: 0;
-    z-index: 0;
+    z-index: 1;
     width: auto;
-    height: 50%;
+    height: 70%;
     margin-left: 35%;
-    border-radius: 1rem;
+    border-radius: 5%;
 }
 
 img.gif#gif-two {
@@ -215,7 +196,7 @@ img.gif#gif-two {
     width: auto;
     height: 70%;
     margin-left: 35%;
-    border-radius: 1rem;
+    border-radius: 5%;
 }
 
 @-webkit-keyframes in-gif {
@@ -244,15 +225,4 @@ button.postload:hover~img.gif.animated {
 img.gif.animated {
     -webkit-animation: out-gif 0.5s ease-in-out;
     animation-fill-mode: forwards;
-}
-
-.options .box:first-child .animation {
-    align-items: space-around;
-}
-
-.text {
-    display: flex;
-    flex-direction: column;
-    height: 110%;
-    width: 100%;
 }
