--- a/styles/custom-chess.css
+++ b/styles/custom-chess.css
@@ -72,7 +72,7 @@ body {
   display: none;
 }
 .dropdown-container a {
-  opacity: 0;
+  opacity: 1;
   background-color: rgb(43, 41, 41);
 }
 
@@ -142,8 +142,10 @@ body {
 @keyframes showMenuItems {
   from {
     opacity: 0;
+    transform: scaleX(-1);
   }
   to {
     opacity: 1;
+    transform: scaleX(1);
   }
 }
