--- a/styles/custom-chess.css
+++ b/styles/custom-chess.css
@@ -10,6 +10,7 @@
 
 body {
   font-family: "Hubballi", cursive;
+  overflow: hidden;
 }
 
 
@@ -23,7 +24,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: rgb(17, 17, 17);
   overflow-x: hidden;
   padding-top: 20px;
 }
@@ -61,6 +62,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  background-color: #9dc5c3;
+  background-image: linear-gradient(-315deg, rgb(57, 104, 88) 0%, rgb(17, 17, 17) 70%);
+  padding-top: 18px;
+  padding-bottom: 50px;
+  padding-right: 45px;
+  margin-top: -8px;
 }
 
 .active {
