--- a/styles/index.css
+++ b/styles/index.css
@@ -2,41 +2,6 @@
     font-family: 'Hubballi', cursive;
 }
 
-@media screen and (max-width: 900px) {
-    body .header {
-        position: relative;
-        border-color: gray;
-        border-style: groove;
-        border-width: 1rem;
-        padding: 2rem;
-        display: flex;
-        flex-direction: column;
-        align-items: space-around;
-        justify-content: space-around;
-        background-color: rgb(57, 104, 88);
-        height: 50%;
-        z-index: 2;
-        padding-top: 0px;
-        gap: 50px;
-        overflow-x:hidden;
-    }
-
-    .header div {
-        align-self: center;
-        width: 300px;
-        display: flex;
-        justify-content: center;
-    }
-    .header div span {
-        height: 50px;
-    }
-
-    .header div:nth-child(2) {
-        width: 180px;
-        margin-bottom: 20px;
-    }
-}
-
 body {
     margin: 0vh;
     height: 100vh;
@@ -51,17 +16,21 @@ body {
     border-width: 1rem;
     padding: 2%;
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     background-color: rgb(57, 104, 88);
     height: 75;
     z-index: 2;
-    overflow: auto;
+    overflow: hidden;
 }
 
-.header div:first-child, .header div:nth-child(2) {
+.header div:first-child, .header div:nth-child(3) {
     display: flex;
     height: 0%;
     gap: 1rem;
+}
+
+.header div:nth-child(2) {
+    display: flex; 
 }
 
 .header span {
@@ -74,6 +43,9 @@ body {
     height: 4rem;
     justify-content: center;
     align-items: center;
+}
+.header img {
+    width: 75%;
 }
 
 .options {
@@ -225,4 +197,43 @@ button.postload:hover~img.gif.animated {
 img.gif.animated {
     animation: out-gif 0.5s ease-in-out;
     animation-fill-mode: forwards;
+}
+  
+@media screen and (max-width: 900px) {
+    body .header {
+        position: relative;
+        border-color: gray;
+        border-style: groove;
+        border-width: 1rem;
+        padding: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: space-around;
+        justify-content: space-around;
+        background-color: rgb(57, 104, 88);
+        height: 50%;
+        z-index: 2;
+        padding-top: 0px;
+        gap: 50px;
+        overflow-x:hidden;
+    }
+
+    .header div {
+        align-self: center;
+        width: 300px;
+        display: flex;
+        justify-content: center;
+    }
+    .header div span {
+        height: 50px;
+    }
+    
+    .header div:nth-child(2) {
+        display: none;
+    }
+
+    .header div:nth-child(3) {
+        width: 180px;
+        margin-bottom: 20px;
+    }
 }
