--- a/styles/custom-chess.css
+++ b/styles/custom-chess.css
@@ -83,6 +83,8 @@ body {
 .dropdown-container a {
   opacity: 1;
   background-color: rgb(43, 41, 41);
+  width: 60%;
+  padding-right: 64px;
 }
 
 .dropdown-btn.active + .dropdown-container {
@@ -180,4 +182,8 @@ img[src~="../images/brain.png"] {
     width: 256px;
     height: 256px;
   }
+}
+
+[contenteditable="true"]:focus {
+  box-shadow: inset 0px 0px 0px 2px rgb(255, 255, 255);
 }
